# selenium-book-search-slack-alerts

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  renovate.json  tox.ini
.github/workflows/: check-books-periodically.yaml  check-books-periodically.yml  code_quality.yaml  e2e-test.yaml  integration-test.yaml  python-tests.yaml  tox.yaml  unit-tests.yaml  validate-renovate-config.yaml
tests/e2e/: test_e2e.py
tests/integration/: test_integration.py
tests/unit/: test_main.py
