[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium-book-search-slack-alerts"
version = "1.0.0"
description = "Automated script to search a local bookstore's website using Selenium and send Slack alerts."
dependencies = [
  "selenium==4.35.0"
]
requires-python = ">=3.13"
authors = [
  { name = "k-candidate" }
]
keywords = ["python", "selenium", "gha", "slack", "automation", "books"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Repository = "https://github.com/k-candidate/selenium-book-search-slack-alerts"
"Blog" = "https://k-candidate.github.io/2025/08/19/python-selenium-slack-automating-book-availability-checks.html"

[project.scripts]
book-search = "main:main"

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "isort>=6.0.1",
  "mypy>=1.17.1"
]

[tool.black]
line-length = 79
target-version = ["py313"]
exclude = '''
/(
  \.git
| \.mypy_cache
| \.pytest_cache
| \.venv
| build
| dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = 3.13
ignore_missing_imports = true
strict = true
warn_unused_configs = true
exclude = "build"
