[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium-book-search-slack-alerts"
version = "1.0.0"
description = "Automated script to search a local bookstore's website using Selenium and send Slack alerts."
dependencies = [
  "selenium==4.35.0"
]
requires-python = ">=3.13"
authors = [
  { name = "k-candidate" }
]
keywords = ["python", "selenium", "gha", "slack", "automation", "books"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Repository = "https://github.com/k-candidate/selenium-book-search-slack-alerts"
"Blog" = "https://k-candidate.github.io/2025/08/19/python-selenium-slack-automating-book-availability-checks.html"

[project.scripts]
book-search = "main:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.12.11",
  "mypy>=1.17.1"
]

[tool.ruff]
target-version = "py313"
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".venv",
  "build",
  "dist"
]

[tool.ruff.lint]
# Enable common linting rules
select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=import sorting
ignore = ["E501"]

[tool.ruff.format]
# Configure Ruff formatter instead of Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = 3.13
ignore_missing_imports = true
strict = true
warn_unused_configs = true
exclude = "build"
